--- a/css/media.css
+++ b/css/media.css
@@ -89,6 +89,36 @@
     max-width: 768px;
     width: 768px;
   }
+  .header__title {
+    margin-top: 50px;
+  }
+  .header__content {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .header__content .__left {
+    width: 100%;
+    text-align: center;
+  }
+  .header__content .__left .pre-title {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .header__content .__left .pre-title::before {
+    content: '';
+    display: none;
+  }
+  .header__content .__right {
+    margin-top: 20px;
+    width: 100%;
+    text-align: center;
+  }
+  .header__content .__right img {
+    width: 400px;
+  }
   .header__nav {
     background: #fff;
   }
@@ -138,6 +168,41 @@
   }
   .header__nav .nav__collapse ul .nav-link {
     margin: 7px 0 !important;
+  }
+  .portfolio .project {
+    padding: 25px 15px 15px 15px;
+  }
+  .clients .clients__content {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+  }
+  .clients .clients__content .__right {
+    width: 100%;
+    text-align: center;
+  }
+  .clients .clients__content .__right .promise {
+    -webkit-box-orient: horizontal !important;
+    -webkit-box-direction: normal !important;
+        -ms-flex-direction: row !important;
+            flex-direction: row !important;
+    margin: 35px 15px 25px 0;
+    text-align: start;
+  }
+  .clients .clients__content .__left {
+    width: 100%;
+    text-align: center;
+    margin: 0 auto;
+  }
+  .clients .clients__content .__left img {
+    width: 400px;
+  }
+  .services .__wrap {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
   }
 }
 
